Backport to 1.19